--- a/.gitignore
+++ b/.gitignore
@@ -85,4 +85,5 @@ msbuild.err
 msbuild.wrn
 
 #customs
-CallDLL/CallDynamic/DynamicExample/
+CallDLL/CallDynamic/DynamicExample/*/*
+CallDLL/CallDynamic/DynamicExample/include/static.h
